--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "beggar",
+  "name": "shavtzak",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@vercel/postgres": "^0.8.0",
     "drizzle-orm": "^0.29.4",
     "geist": "^1.3.0",
     "next": "^14.2.1",
